@@ -26,9 +26,9 @@ import org.junit.Assert._
 class LRUCacheTest extends Assertions {
   @Test def shouldStoreSingleValue() {
     val cache = new LRUCache[String, String](5)
-    cache.put("hello", "world")
-    
-    assert( cache.get("hello") === "world")
+    cache.getOrElseUpdate("hello", "world")
+
+    assert(cache.get("hello") === Some("world"))
   }
 
   def fillWithOneToFive(cache: LRUCache[String, String]) {
@@ -43,9 +43,9 @@ class LRUCacheTest extends Assertions {
     val cache = new LRUCache[String, String](5)
     fillWithOneToFive(cache)
 
-    cache.put("6", "6")
+    cache.getOrElseUpdate("6", "6")
 
-    assertFalse( cache.containsKey("1") );
+    assertFalse(cache.containsKey("1"));
   }
 
   @Test def shouldLooseTheLeastUsedItem() {
@@ -59,6 +59,7 @@ class LRUCacheTest extends Assertions {
 
     cache.put("6", "6")
 
-    assertFalse( cache.containsKey("2") );
+    assertFalse(cache.containsKey("2"));
   }
+
 }
